--- a/nero-barber/src/index.css
+++ b/nero-barber/src/index.css
@@ -2,7 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+}
+
+html,
 body {
-  background-color: #09090b;
-  color: #fff;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #09090b; /* Fundo Preto */
+  color: #ffffff; /* Texto Branco */
+}
+
+#root {
+  isolation: isolate;
+  width: 100%;
+  min-height: 100vh;
 }
