--- a/nero-barber/src/index.css
+++ b/nero-barber/src/index.css
@@ -1,25 +1,15 @@
+/* src/index.css */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+  font-family: system-ui, -apple-system, sans-serif;
 }
 
-html,
 body {
   margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
   background-color: #09090b; /* Fundo Preto */
-  color: #ffffff; /* Texto Branco */
-}
-
-#root {
-  isolation: isolate;
-  width: 100%;
-  min-height: 100vh;
+  color: #f4f4f5; /* Texto Branco */
+  overflow-x: hidden; /* Evita barra de rolagem horizontal */
 }
